[gd_scene load_steps=3 format=3 uid="uid://mhq8kqrwhxu1"]

[ext_resource type="Script" path="res://UI/build_on/build_on_choice_screen.gd" id="1_fuysh"]
[ext_resource type="PackedScene" uid="uid://degxsxqwdypep" path="res://UI/build_on/build_on_interactable.tscn" id="1_g4ocv"]

[node name="BuildOnChoiceScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fuysh")

[node name="BuildOnChoice1" parent="." instance=ExtResource("1_g4ocv")]
layout_mode = 2
offset_left = 192.0
offset_top = 256.0
offset_right = 192.0
offset_bottom = 384.0

[node name="BuildOnChoice2" parent="." instance=ExtResource("1_g4ocv")]
layout_mode = 2
offset_left = 512.0
offset_top = 256.0
offset_right = 512.0
offset_bottom = 384.0

[node name="BuildOnChoice3" parent="." instance=ExtResource("1_g4ocv")]
layout_mode = 2
offset_left = 832.0
offset_top = 256.0
offset_right = 832.0
offset_bottom = 384.0

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 64.0
offset_bottom = 131.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "CHOOSE A BUILD-ON"
horizontal_alignment = 1
vertical_alignment = 1
